# SnakEats

code/: SnakEats.cpp  SnakEats.hpp  SnakIter.cpp  SnakIter.hpp
docs/: readme.md
envi/: CMakeLists.txt
